# raymino

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENCE.MD  LICENCE.md  README.MD
cmake/: CPM.cmake  CompilerWarnings.cmake  ProjectSettings.cmake  StaticAnalyzers.cmake
ext/: CMakeLists.txt  raygui.c  raygui.cmake  rres.c  rres.cmake
inc/: app.hpp  cstring_view.hpp  dependency_info.hpp  game.hpp  gameplay.hpp  graphics.hpp  grid.hpp  gui.hpp  input.hpp  loading.hpp  menu.hpp  ostream.hpp  playfield.hpp  savefile.hpp  scenes.hpp  textbuffer.hpp  timer.hpp  types.hpp  windows.hpp
src/: app-types.cpp  app.cpp  cellular.cpp  game.cpp  gameplay.cpp  graphics.cpp  grid.cpp  gui.cpp  input.cpp  loading.cpp  main.cpp  menu.cpp  ostream.cpp  playfield.cpp  savefile.cpp  windows.cpp
test/: .clang-tidy  app-types.cpp  app.cpp  basicRotation.cpp  cstring_view.cpp  gameplay.cpp  grid.cpp  gui.cpp  savefile.cpp  textbuffer.cpp
